# HPXNN

HPXNN_SOURCE_CODE/: HPX_CONVERTER.cpp  README.md
HPXNN_SOURCE_CODE/PyTorch_Programs/2_Layer_Neural_Network/: CMakeLists.txt  main.cpp
HPXNN_SOURCE_CODE/PyTorch_Programs/Autograd/: CMakeLists.txt  main.cpp
HPXNN_SOURCE_CODE/PyTorch_Programs/CNN_RESNET/: CMakeLists.txt  prediction.cpp
HPXNN_SOURCE_CODE/PyTorch_Programs/Feed_Forward_Neural_Network/: CMakeLists.txt  main.cpp
HPXNN_SOURCE_CODE/PyTorch_Programs/Linear_Regression/: CMakeLists.txt  main.cpp
HPXNN_SOURCE_CODE/PyTorch_Programs/Logistic_Regression/: CMakeLists.txt  main.cpp
HPXNN_SOURCE_CODE/PyTorch_Programs/MNIST/: CMakeLists.txt  main.cpp
HPXNN_SOURCE_CODE/PyTorch_Programs/Simple_Optimization/: CMakeLists.txt  optimization.cpp
HPXNN_SOURCE_CODE/PyTorch_Programs/Tensor_Functions/: CMakeLists.txt  main.cpp
